--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,11 @@
   font-weight: bold;
 }
 
+.box-section {
+  background-color: #D8EDEF;
+  min-height: 100vh;
+}
+
 .main-inp {
   position: relative;
   border: none;
@@ -251,10 +256,6 @@ input:focus::placeholder {
   transition: 0.3s;
 }
 
-.section {
-  padding-bottom: calc(59px + 1rem) !important;
-}
-
 .login-section .main-inp {
   position: relative;
   border: 2px solid #0ABAB5 !important;
@@ -307,70 +308,6 @@ input:focus::placeholder {
 .login-section .btn-social .icon {
   width: 18px;
   height: auto;
-}
-
-.main-nav {
-  position: fixed !important;
-  bottom: 0;
-  width: 100%;
-  height: 59px;
-  top: auto;
-  border-top: 1px solid #ddd;
-  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1294117647);
-          box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1294117647);
-  background-color: #FFFFFF;
-}
-.main-nav .nav-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-}
-.main-nav .nav-item .nav-link {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 3px;
-  padding: 14px 16px;
-  color: #AFB1B6;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-.main-nav .nav-item .nav-link:hover {
-  color: #010B14;
-}
-.main-nav .nav-item .nav-link .nav-icon {
-  font-size: 23px;
-}
-
-.contact-section {
-  background-color: #D8EDEF;
-  border-radius: 0 0 25px 25px;
-  -webkit-border-radius: 0 0 25px 25px;
-  -moz-border-radius: 0 0 25px 25px;
-  -ms-border-radius: 0 0 25px 25px;
-  -o-border-radius: 0 0 25px 25px;
 }
 
 .profile-section .img-user {
