--- a/css/sass/variables/_colors.scss
+++ b/css/sass/variables/_colors.scss
@@ -2,6 +2,9 @@ $mian-color:#0ABAB5;
 $light-mian-color:#D8EDEF;
 $light-grey-color:#CFE1E3;
 $grey-color:#f5f5f5;
+$white-color: #fff;
+$light-gray: #AFB1B6;
 $mian-text-color:#010B14;
 $color-50:#4D545A;
 $yellow-color:#FFF181;
+
