--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,80 @@
   color: #010B14 !important;
 }
 
+.btn-inp-check {
+  background-color: white;
+  padding: 1rem;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1411764706);
+          box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1411764706);
+  text-align: center;
+  position: relative;
+}
+.btn-inp-check .icon-inp {
+  display: none;
+}
+.btn-inp-check.check .icon-inp {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  right: -10px;
+  top: -10px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  background-color: #0ABAB5;
+  transition: 300ms;
+  -webkit-transition: 300ms;
+  -moz-transition: 300ms;
+  -ms-transition: 300ms;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -o-transition: 300ms;
+}
+.btn-inp-check .inp {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  left: 0;
+  top: 0;
+}
+.btn-inp-check .box-icon {
+  border: 2px solid #FFF181;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin: 0 auto 0.7rem auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #F578B6;
+  font-size: 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.btn-inp-check .text {
+  font-size: 16px;
+}
+
 .lg-title {
   color: #0ABAB5;
   font-size: 35px;
