--- a/css/main.css
+++ b/css/main.css
@@ -173,14 +173,21 @@
   width: 100%;
   border: none !important;
   outline: none !important;
-  box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
   padding: 1rem 1rem;
   padding-right: calc(1rem + 15px + 0.5rem);
+}
+.main-inp input::-webkit-input-placeholder {
+  color: #010B14;
 }
 .main-inp input::-moz-placeholder {
   color: #010B14;
 }
 .main-inp input:-ms-input-placeholder {
+  color: #010B14;
+}
+.main-inp input::-ms-input-placeholder {
   color: #010B14;
 }
 .main-inp input::placeholder {
@@ -189,7 +196,8 @@
 
 .inp-check {
   position: relative;
-  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1921568627);
+  -webkit-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1921568627);
+          box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1921568627);
   margin-right: 3px;
   margin-left: 3px;
 }
@@ -217,9 +225,15 @@
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   color: white;
   font-size: 16px;
 }
@@ -238,14 +252,16 @@
   height: 200px;
   -ms-border-radius: 12px;
   -o-border-radius: 12px;
-  box-shadow: 0px 3px 9px 0 rgba(255, 164, 7, 0.1215686275), 0px 0px 5px 0 rgba(0, 0, 0, 0.168627451);
+  -webkit-box-shadow: 0px 3px 9px 0 rgba(255, 164, 7, 0.1215686275), 0px 0px 5px 0 rgba(0, 0, 0, 0.168627451);
+          box-shadow: 0px 3px 9px 0 rgba(255, 164, 7, 0.1215686275), 0px 0px 5px 0 rgba(0, 0, 0, 0.168627451);
   outline: none !important;
   padding: 1rem 1rem;
   border: dashed 2px #4D545A;
 }
 
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0%;
   margin: 0%;
 }
@@ -288,6 +304,11 @@ select:focus {
 input {
   direction: rtl !important;
 }
+input:focus::-webkit-input-placeholder {
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
 input:focus::-moz-placeholder {
   opacity: 0;
   -moz-transition: 0.3s;
@@ -298,8 +319,14 @@ input:focus:-ms-input-placeholder {
   -ms-transition: 0.3s;
   transition: 0.3s;
 }
+input:focus::-ms-input-placeholder {
+  opacity: 0;
+  -ms-transition: 0.3s;
+  transition: 0.3s;
+}
 input:focus::placeholder {
   opacity: 0;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -314,10 +341,16 @@ input:focus::placeholder {
 .login-section .main-inp .icon {
   color: #4D545A !important;
 }
+.login-section .main-inp input::-webkit-input-placeholder {
+  color: #4D545A !important;
+}
 .login-section .main-inp input::-moz-placeholder {
   color: #4D545A !important;
 }
 .login-section .main-inp input:-ms-input-placeholder {
+  color: #4D545A !important;
+}
+.login-section .main-inp input::-ms-input-placeholder {
   color: #4D545A !important;
 }
 .login-section .main-inp input::placeholder {
@@ -328,9 +361,15 @@ input:focus::placeholder {
   font-size: 16px;
 }
 .login-section .btn-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 0.5rem;
   padding: 0.5rem 1rem;
   font-weight: bold;
@@ -339,7 +378,8 @@ input:focus::placeholder {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.18);
+  -webkit-box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.18);
+          box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.18);
   text-transform: capitalize;
   min-width: 112.5px;
 }
@@ -349,10 +389,18 @@ input:focus::placeholder {
 }
 
 .top-nav .nav-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .top-nav .nav-content .navbar {
   gap: 13px;
@@ -362,7 +410,8 @@ input:focus::placeholder {
   padding: 0;
 }
 .top-nav .nav-content .navbar .navbar-toggler:focus {
-  box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
 }
 .top-nav .nav-content .image-holder a {
   position: relative;
@@ -376,9 +425,15 @@ input:focus::placeholder {
   width: 17px;
   height: 17px;
   border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .header {
@@ -388,6 +443,7 @@ input:focus::placeholder {
   width: 100%;
   z-index: 100;
   background-color: #fff;
+  -webkit-transition: 0.4s;
   transition: 0.4s;
   border-bottom: 1px solid #efeff0;
 }
@@ -399,28 +455,51 @@ input:focus::placeholder {
     border-top: 1px solid #efeff0;
   }
   .header .main-nav .nav-menu {
-    justify-content: space-around !important;
+    -ms-flex-pack: distribute !important;
+        justify-content: space-around !important;
   }
   .header .main-nav .nav-menu .nav-item .nav-link {
     padding: 6px 11px !important;
   }
 }
 .header .main-nav .nav-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  align-items: flex-start;
-  flex-grow: 1;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 .header .main-nav .nav-menu .nav-item .nav-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 3px;
   padding: 14px 16px;
   color: #AFB1B6;
+  -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 .header .main-nav .nav-menu .nav-item .nav-link .nav-icon {
@@ -448,7 +527,8 @@ input:focus::placeholder {
   -o-object-fit: cover;
      object-fit: cover;
   margin-bottom: 5px;
-  box-shadow: 0px 1px 7px 0 hsla(0deg, 0%, 0%, 0.46);
+  -webkit-box-shadow: 0px 1px 7px 0 hsla(0deg, 0%, 0%, 0.46);
+          box-shadow: 0px 1px 7px 0 hsla(0deg, 0%, 0%, 0.46);
 }
 .profile-section .name-user {
   font-size: 19px;
@@ -469,10 +549,14 @@ input:focus::placeholder {
   padding: 0.7rem 1rem;
   font-size: 16px;
   display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 7px;
 }
 .profile-section .list-profile li .link .icon {
   width: 15px;
-}/*# sourceMappingURL=main.css.map */
+}
