--- a/css/sass/variables/_colors.scss
+++ b/css/sass/variables/_colors.scss
@@ -5,6 +5,7 @@ $grey-color:#f5f5f5;
 $white-color: #fff;
 $light-gray: #AFB1B6;
 $mian-text-color:#010B14;
+$black-color: #000;
 $color-50:#4D545A;
 $yellow-color:#FFF181;
 
