--- a/css/sass/pages/_globalPage.scss
+++ b/css/sass/pages/_globalPage.scss
@@ -37,5 +37,6 @@ input {
 }
 
 .section {
-  padding-bottom: calc(65.5px + 62px) !important;
+  padding-top: calc(62px + 1rem) !important;
+  padding-bottom: calc(65.5px + 1rem)  !important;
 }
