--- a/css/sass/components/_dropdowns&Buttons.scss
+++ b/css/sass/components/_dropdowns&Buttons.scss
@@ -9,6 +9,11 @@
  cursor: pointer;
  -ms-border-radius:9px ;
  -o-border-radius:9px ;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ gap: 5px;
+    width: fit-content;
  &.btn-yellow {
   background-color: $yellow-color !important;
   color: $mian-text-color !important;
