--- a/css/main.css
+++ b/css/main.css
@@ -730,6 +730,26 @@ input:focus::placeholder {
   color: #F578B6;
 }
 
+.sections .swiper-btn:after {
+  background-color: white !important;
+  font-size: 16px !important;
+  width: 26px !important;
+  padding: 15px !important;
+  height: 26px !important;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-align: center !important;
+      -ms-flex-align: center !important;
+          align-items: center !important;
+  -webkit-box-pack: center !important;
+      -ms-flex-pack: center !important;
+          justify-content: center !important;
+  border-radius: 50% !important;
+  color: black !important;
+  -webkit-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5215686275) !important;
+          box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5215686275) !important;
+}
 .sections .swiper-wrapper {
   height: -webkit-fit-content !important;
   height: -moz-fit-content !important;
