--- a/css/sass/pages/_main.scss
+++ b/css/sass/pages/_main.scss
@@ -101,6 +101,21 @@
   }
 }
 .sections {
+  .swiper-btn {
+    &:after {
+      background-color: white !important;
+  font-size: 16px !important;
+  width: 26px !important;
+  padding: 15px !important;
+  height: 26px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  border-radius: 50% !important;
+  color: black !important;
+  box-shadow: 0 0 6px 0 #00000085 !important;
+    }
+  }
   .swiper-wrapper {
     height: fit-content !important;
     .box-sections {
