--- a/css/main.css
+++ b/css/main.css
@@ -170,6 +170,104 @@
   min-height: 100vh;
 }
 
+.box-offer {
+  -webkit-box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.1411764706);
+          box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.1411764706);
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+}
+.box-offer .header-box {
+  position: relative;
+  padding: 1rem;
+  overflow: hidden;
+  border-radius: 15px 15px 0 0;
+  height: 150px;
+  -webkit-border-radius: 15px 15px 0 0;
+  -moz-border-radius: 15px 15px 0 0;
+  -ms-border-radius: 15px 15px 0 0;
+  -o-border-radius: 15px 15px 0 0;
+}
+.box-offer .header-box .bg-img {
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.box-offer .header-box .add-favorite {
+  background-color: #F578B6;
+  color: white;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  font-size: 20px;
+  -o-border-radius: 50%;
+  border: none !important;
+  outline: none !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.box-offer .content {
+  padding: 1rem;
+  border: 2px solid #ddd;
+  border-top: none;
+  border-radius: 0 0 15px 15px;
+  -webkit-border-radius: 0 0 15px 15px;
+  -moz-border-radius: 0 0 15px 15px;
+  -ms-border-radius: 0 0 15px 15px;
+  -o-border-radius: 0 0 15px 15px;
+}
+.box-offer .content .main-btn {
+  font-size: 13px !important;
+}
+.box-offer .content .text {
+  font-size: 13px;
+}
+.box-offer .content .price .small-price {
+  font-size: 13px;
+}
+.box-offer .content .old-price {
+  color: #A3A3A3;
+  font-size: 13px;
+}
+.box-offer .content .info-user .img-user {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border: 2px solid #FFF181;
+  overflow: hidden;
+  margin: 0 auto;
+}
+.box-offer .content .info-user .img-user img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.box-offer .content .info-user .name {
+  font-size: 13px;
+}
+
 .main-inp {
   position: relative;
   border: none;
