--- a/css/sass/components/_boxes.scss
+++ b/css/sass/components/_boxes.scss
@@ -1,4 +1,61 @@
 .box-section {
- background-color: $light-mian-color;
-min-height: 100vh;
+  background-color: $light-mian-color;
+  min-height: 100vh;
+}
+.stor-box {
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 0 rgb(0 0 0 / 14%);
+  transition: 150ms;
+  -webkit-transition: 150ms;
+  -moz-transition: 150ms;
+  -ms-transition: 150ms;
+  -o-transition: 150ms;
+  background-color: $white-color;
+  .main-info {
+    @include flex-between;
+    margin-bottom: 10px;
+    .stor-info {
+      @include flex-center;
+      gap: 10px;
+      .img-holder {
+        border: 1px solid $yellow-color;
+        border-radius: 50%;
+        padding: 5px;
+        img {
+          @include circle(45px, 45px);
+        }
+      }
+      .text-holder {
+        .name {
+          margin-bottom: 4px;
+          font-weight: 600;
+          font-size: 12px;
+          color: #767676;
+        }
+        .location {
+          font-size: 10px;
+          color: $light-text;
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+  .stor-des {
+    color: $light-text;
+    font-size: 12px;
+    margin-bottom: 20px;
+  }
+  .btn-holder-more {
+    @include flex-center;
+    button, a {
+      font-size: 11px;
+      border-radius: 6px;
+      padding: 7px 15px;
+      transition: $sm-transition;
+      &:hover {
+        background-color: $pink-color;
+      }
+    }
+  }
 }
