--- a/css/sass/components/_dropdowns&Buttons.scss
+++ b/css/sass/components/_dropdowns&Buttons.scss
@@ -1,99 +1,109 @@
 .main-btn {
- color: white !important;
- background-color: $mian-color;
- padding: 0.5rem 1rem;
- border-radius:9px ;
- -webkit-border-radius:9px ;
- -moz-border-radius:9px ;
- outline: 0 !important;
- cursor: pointer;
- -ms-border-radius:9px ;
- -o-border-radius:9px ;
- display: flex;
- align-items: center;
- justify-content: center;
- gap: 5px;
-    width: fit-content;
- &.btn-yellow {
-  background-color: $yellow-color !important;
-  color: $mian-text-color !important;
- }
- &.btn-light-grey {
-  background-color: $light-grey-color !important;
-  color: $mian-text-color !important;
- }
-}
-.btn-inp-check {
- background-color: white;
- cursor: pointer;
- padding: 1rem;
- height: 142px;
- border-radius: 10px;
- box-shadow: 0 0 10px 0 #00000024;
- text-align: center;
- transition: 150ms;
- -webkit-transition: 150ms;
- -moz-transition: 150ms;
- -ms-transition: 150ms;
- -o-transition: 150ms;
- position: relative;
- .inp-icon
-{
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  right: -10px;
-  top: -10px;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-  background-color: #0ABAB5;
-  color: white;
+  color: white !important;
+  background-color: $mian-color;
+  padding: 0.5rem 1rem;
+  border-radius: 9px;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  outline: 0 !important;
+  cursor: pointer;
+  -ms-border-radius: 9px;
+  -o-border-radius: 9px;
   display: flex;
   align-items: center;
   justify-content: center;
-  opacity:0;
+  gap: 5px;
+  width: fit-content;
+  &.btn-yellow {
+    background-color: $yellow-color !important;
+    color: $mian-text-color !important;
+  }
+  &.btn-light-grey {
+    background-color: $light-grey-color !important;
+    color: $mian-text-color !important;
+  }
+}
+.btn-inp-check {
+  background-color: white;
+  cursor: pointer;
+  padding: 1rem;
+  height: 142px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 0 #00000024;
+  text-align: center;
   transition: 150ms;
   -webkit-transition: 150ms;
   -moz-transition: 150ms;
   -ms-transition: 150ms;
   -o-transition: 150ms;
-}
- &.check {
-  background-color: #FFF181;
+  position: relative;
   .inp-icon {
-   opacity:1;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    right: -10px;
+    top: -10px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    background-color: #0abab5;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: 150ms;
+    -webkit-transition: 150ms;
+    -moz-transition: 150ms;
+    -ms-transition: 150ms;
+    -o-transition: 150ms;
+  }
+  &.check {
+    background-color: #fff181;
+    .inp-icon {
+      opacity: 1;
+    }
+  }
+  .inp {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    left: 0;
+    top: 0;
+  }
+  .box-icon {
+    border: 2px solid #fff181;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin: 0 auto 0.7rem auto;
+    @include flex-center;
+    background-color: $pink-color;
+    font-size: 20px;
+    color: $white-color;
+  }
+  .text {
+    font-size: 16px;
+  }
+}
 
- }
- }
-.inp {
-  position: absolute;
-width: 100%;
-height: 100%;
-opacity: 0;
-left: 0;
-top: 0;
-}
-.box-icon {
- border: 2px solid #FFF181;
- border-radius: 50%;
- -webkit-border-radius: 50%;
- -moz-border-radius: 50%;
- -ms-border-radius: 50%;
- -o-border-radius: 50%;
- width: 50px;
- height: 50px;
- margin: 0 auto 0.7rem auto;
- display: flex;
- align-items: center;
- color: #F578B6;
- font-size: 20px;
- background-color: white;
- justify-content: center;
-}
-.text {
- font-size: 16px;
-}
+.btn-circle {
+  @include flex-center;
+  @include circle(33px, 33px);
+  &.btn-heart {
+    background-color: $pink-color;
+    color: $white-color;
+    box-shadow: 0px 4px 12px 0 #9d9d9da3;
+    transition: $sm-transition;
+    &:hover {
+      background-color: $mian-color;
+    }
+  }
 }
