--- a/css/sass/variables/_colors.scss
+++ b/css/sass/variables/_colors.scss
@@ -1,6 +1,7 @@
 $mian-color:#0ABAB5;
 $alt-color:#DAC8FF;
 $light-mian-color:#D8EDEF;
+$light-mian-color2:#E4F7F7;
 $light-grey-color:#CFE1E3;
 $grey-color:#f5f5f5;
 $white-color: #fff;
