--- a/css/main.css
+++ b/css/main.css
@@ -49,9 +49,15 @@
   cursor: pointer;
   -ms-border-radius: 9px;
   -o-border-radius: 9px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 5px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -72,7 +78,8 @@
   padding: 1rem;
   height: 142px;
   border-radius: 10px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1411764706);
+  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1411764706);
+          box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1411764706);
   text-align: center;
   transition: 150ms;
   -webkit-transition: 150ms;
@@ -94,9 +101,15 @@
   -o-border-radius: 50%;
   background-color: #0abab5;
   color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   opacity: 0;
   transition: 150ms;
   -webkit-transition: 150ms;
@@ -128,9 +141,15 @@
   width: 50px;
   height: 50px;
   margin: 0 auto 0.7rem auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: #f578b6;
   font-size: 20px;
   color: #fff;
@@ -140,9 +159,15 @@
 }
 
 .btn-circle {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 33px;
   height: 33px;
   border-radius: 50%;
@@ -150,11 +175,29 @@
 .btn-circle.btn-heart {
   background-color: #f578b6;
   color: #fff;
-  box-shadow: 0px 4px 12px 0 rgba(157, 157, 157, 0.6392156863);
+  -webkit-box-shadow: 0px 4px 12px 0 rgba(157, 157, 157, 0.6392156863);
+          box-shadow: 0px 4px 12px 0 rgba(157, 157, 157, 0.6392156863);
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn-circle.btn-heart:hover {
   background-color: #0ABAB5;
+}
+
+.main-btn-tap {
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  padding: 0.3rem 1rem;
+  border: none !important;
+  outline: none !important;
+  text-align: center;
+}
+.main-btn-tap.active {
+  background-color: #E4F7F7;
+  color: #0ABAB5;
 }
 
 .lg-title {
@@ -174,7 +217,8 @@
 }
 
 .box-offer {
-  box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.1411764706);
+  -webkit-box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.1411764706);
+          box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.1411764706);
   border-radius: 15px;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
@@ -215,9 +259,15 @@
   -o-border-radius: 50%;
   border: none !important;
   outline: none !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .box-offer .content {
   padding: 1rem;
@@ -267,7 +317,8 @@
 .stor-box {
   padding: 1rem;
   border-radius: 10px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.14);
+  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.14);
+          box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.14);
   transition: 150ms;
   -webkit-transition: 150ms;
   -moz-transition: 150ms;
@@ -276,15 +327,27 @@
   background-color: #fff;
 }
 .stor-box .main-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 10px;
 }
 .stor-box .main-info .stor-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 10px;
 }
 .stor-box .main-info .stor-info .img-holder {
@@ -314,20 +377,51 @@
   margin-bottom: 20px;
 }
 .stor-box .btn-holder-more {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .stor-box .btn-holder-more button,
 .stor-box .btn-holder-more a {
   font-size: 11px;
   border-radius: 6px;
   padding: 7px 15px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .stor-box .btn-holder-more button:hover,
 .stor-box .btn-holder-more a:hover {
   background-color: #f578b6;
+}
+
+.box-border {
+  padding: 1rem;
+  background-color: white;
+  border: 2px solid #0ABAB5;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  -webkit-box-shadow: 0px 7px 10px 0 rgba(0, 0, 0, 0.07);
+          box-shadow: 0px 7px 10px 0 rgba(0, 0, 0, 0.07);
+}
+.box-border .img-box {
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .main-inp {
@@ -357,14 +451,21 @@
   width: 100%;
   border: none !important;
   outline: none !important;
-  box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
   padding: 1rem 1rem;
   padding-right: calc(1rem + 15px + 0.5rem);
+}
+.main-inp input::-webkit-input-placeholder {
+  color: #010B14;
 }
 .main-inp input::-moz-placeholder {
   color: #010B14;
 }
 .main-inp input:-ms-input-placeholder {
+  color: #010B14;
+}
+.main-inp input::-ms-input-placeholder {
   color: #010B14;
 }
 .main-inp input::placeholder {
@@ -373,7 +474,8 @@
 
 .inp-check {
   position: relative;
-  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1921568627);
+  -webkit-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1921568627);
+          box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1921568627);
   margin-right: 3px;
   margin-left: 3px;
 }
@@ -401,9 +503,15 @@
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   color: white;
   font-size: 16px;
 }
@@ -422,7 +530,8 @@
   height: 200px;
   -ms-border-radius: 12px;
   -o-border-radius: 12px;
-  box-shadow: 0px 3px 9px 0 rgba(255, 164, 7, 0.1215686275), 0px 0px 5px 0 rgba(0, 0, 0, 0.168627451);
+  -webkit-box-shadow: 0px 3px 9px 0 rgba(255, 164, 7, 0.1215686275), 0px 0px 5px 0 rgba(0, 0, 0, 0.168627451);
+          box-shadow: 0px 3px 9px 0 rgba(255, 164, 7, 0.1215686275), 0px 0px 5px 0 rgba(0, 0, 0, 0.168627451);
   outline: none !important;
   padding: 1rem 1rem;
   border: dashed 2px #4D545A;
@@ -434,11 +543,13 @@
 .bg-inp-check:checked {
   background-color: #0ABAB5 !important;
   border: 1px solid #0ABAB5;
-  box-shadow: 0 0 0 0.25rem rgba(10, 186, 180, 0.274);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(10, 186, 180, 0.274);
+          box-shadow: 0 0 0 0.25rem rgba(10, 186, 180, 0.274);
 }
 
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0%;
   margin: 0%;
 }
@@ -481,6 +592,11 @@ select:focus {
 input {
   direction: rtl !important;
 }
+input:focus::-webkit-input-placeholder {
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
 input:focus::-moz-placeholder {
   opacity: 0;
   -moz-transition: 0.3s;
@@ -491,8 +607,14 @@ input:focus:-ms-input-placeholder {
   -ms-transition: 0.3s;
   transition: 0.3s;
 }
+input:focus::-ms-input-placeholder {
+  opacity: 0;
+  -ms-transition: 0.3s;
+  transition: 0.3s;
+}
 input:focus::placeholder {
   opacity: 0;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -508,10 +630,16 @@ input:focus::placeholder {
 .login-section .main-inp .icon {
   color: #4D545A !important;
 }
+.login-section .main-inp input::-webkit-input-placeholder {
+  color: #4D545A !important;
+}
 .login-section .main-inp input::-moz-placeholder {
   color: #4D545A !important;
 }
 .login-section .main-inp input:-ms-input-placeholder {
+  color: #4D545A !important;
+}
+.login-section .main-inp input::-ms-input-placeholder {
   color: #4D545A !important;
 }
 .login-section .main-inp input::placeholder {
@@ -522,9 +650,15 @@ input:focus::placeholder {
   font-size: 16px;
 }
 .login-section .btn-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 0.5rem;
   padding: 0.5rem 1rem;
   font-weight: bold;
@@ -533,7 +667,8 @@ input:focus::placeholder {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.18);
+  -webkit-box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.18);
+          box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.18);
   text-transform: capitalize;
   min-width: 112.5px;
 }
@@ -552,10 +687,18 @@ input:focus::placeholder {
   background-color: white;
 }
 .top-nav .nav-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .top-nav .nav-content .navbar {
   gap: 13px;
@@ -565,7 +708,8 @@ input:focus::placeholder {
   padding: 0;
 }
 .top-nav .nav-content .navbar .navbar-toggler:focus {
-  box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
 }
 .top-nav .nav-content .navbar .offcanvas {
   width: 290px;
@@ -591,6 +735,8 @@ input:focus::placeholder {
   width: 75px;
   height: 75px;
   border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .top-nav .nav-content .navbar .offcanvas .offcanvas-body .navbar-nav .nav-item.nav-img h5, .top-nav .nav-content .navbar .offcanvas .offcanvas-body .navbar-nav .nav-item.nav-img h6 {
   font-weight: 700;
@@ -603,10 +749,18 @@ input:focus::placeholder {
   border-radius: 10px;
   font-size: 17px;
   color: #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   gap: 7px;
 }
 .top-nav .nav-content .navbar .offcanvas .offcanvas-body .navbar-nav .nav-item .nav-link.active {
@@ -629,9 +783,15 @@ input:focus::placeholder {
   width: 17px;
   height: 17px;
   border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .header {
@@ -642,6 +802,7 @@ input:focus::placeholder {
   width: 100%;
   z-index: 100;
   background-color: #fff;
+  -webkit-transition: 0.4s;
   transition: 0.4s;
   border-bottom: 1px solid #efeff0;
 }
@@ -653,28 +814,51 @@ input:focus::placeholder {
     border-top: 1px solid #efeff0;
   }
   .header .main-nav .nav-menu {
-    justify-content: space-around !important;
+    -ms-flex-pack: distribute !important;
+        justify-content: space-around !important;
   }
   .header .main-nav .nav-menu .nav-item .nav-link {
     padding: 6px 11px !important;
   }
 }
 .header .main-nav .nav-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  align-items: flex-start;
-  flex-grow: 1;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 .header .main-nav .nav-menu .nav-item .nav-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 3px;
   padding: 14px 16px;
   color: #AFB1B6;
+  -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 .header .main-nav .nav-menu .nav-item .nav-link .nav-icon {
@@ -702,7 +886,8 @@ input:focus::placeholder {
   -o-object-fit: cover;
      object-fit: cover;
   margin-bottom: 5px;
-  box-shadow: 0px 1px 7px 0 hsla(0deg, 0%, 0%, 0.46);
+  -webkit-box-shadow: 0px 1px 7px 0 hsla(0deg, 0%, 0%, 0.46);
+          box-shadow: 0px 1px 7px 0 hsla(0deg, 0%, 0%, 0.46);
 }
 .profile-section .name-user {
   font-size: 19px;
@@ -723,8 +908,12 @@ input:focus::placeholder {
   padding: 0.7rem 1rem;
   font-size: 16px;
   display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 7px;
 }
 .profile-section .list-profile li .link .icon {
@@ -752,13 +941,20 @@ input:focus::placeholder {
 
 .your-occasions .box-occasions {
   padding: 0 1.5rem;
-  box-shadow: 0px 7px 10px 0 rgba(0, 0, 0, 0.0705882353);
+  -webkit-box-shadow: 0px 7px 10px 0 rgba(0, 0, 0, 0.0705882353);
+          box-shadow: 0px 7px 10px 0 rgba(0, 0, 0, 0.0705882353);
   border: 2px solid #ddd;
   border-radius: 15px;
   height: 151px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .your-occasions .box-occasions .content {
   width: 100%;
@@ -767,9 +963,16 @@ input:focus::placeholder {
   padding: 0 0.8rem;
   text-align: center;
   color: #0ABAB5;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .your-occasions .box-occasions .content .time .item .num {
   font-size: 31px;
@@ -780,7 +983,7 @@ input:focus::placeholder {
   border-left: 1px solid #ddd;
 }
 .your-occasions .box-occasions .content .icon {
-  color: #F578B6;
+  color: #f578b6;
 }
 
 .sections .swiper-btn:after {
@@ -789,12 +992,19 @@ input:focus::placeholder {
   width: 26px !important;
   padding: 15px !important;
   height: 26px !important;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
   display: flex !important;
-  align-items: center !important;
-  justify-content: center !important;
+  -webkit-box-align: center !important;
+      -ms-flex-align: center !important;
+          align-items: center !important;
+  -webkit-box-pack: center !important;
+      -ms-flex-pack: center !important;
+          justify-content: center !important;
   border-radius: 50% !important;
   color: black !important;
-  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5215686275) !important;
+  -webkit-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5215686275) !important;
+          box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5215686275) !important;
 }
 .sections .swiper-wrapper {
   height: -webkit-fit-content !important;
@@ -813,9 +1023,16 @@ input:focus::placeholder {
   -o-border-radius: 15px;
   width: 100%;
   height: 220px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .sections .swiper-wrapper .box-sections::before {
   content: "";
@@ -824,6 +1041,7 @@ input:focus::placeholder {
   top: 0;
   width: 100%;
   height: 100%;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.72)), to(transparent));
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.72), transparent);
   z-index: -1;
 }
@@ -843,7 +1061,8 @@ input:focus::placeholder {
   -o-transition: 300ms;
 }
 .sections .swiper-wrapper .box-sections:focus .bg-img {
-  transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
 }
 .sections .swiper-wrapper .box-sections .badge-box {
   margin-right: auto;
@@ -860,4 +1079,4 @@ input:focus::placeholder {
   margin: 0 auto;
   color: white;
   font-size: 20px;
-}/*# sourceMappingURL=main.css.map */
+}
