--- a/css/sass/components/_boxes.scss
+++ b/css/sass/components/_boxes.scss
@@ -30,7 +30,7 @@
       top: 0;
     }
     .add-favorite {
-      background-color: #f578b6;
+      background-color: $pink-color;
       color: white;
       width: 35px;
       height: 35px;
@@ -153,4 +153,26 @@
       }
     }
   }
+}
+
+.box-border {
+ padding: 1rem;
+ background-color: white;
+ border: 2px solid $mian-color;
+ border-radius: 10px;
+ -webkit-border-radius: 10px;
+ -moz-border-radius: 10px;
+ -ms-border-radius: 10px;
+ -o-border-radius: 10px;
+ box-shadow: 0px 7px 10px 0 rgb(0 0 0 / 7%);
+ .img-box {
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  object-fit: cover;
+}
 }
