--- a/css/sass/components/_dropdowns&Buttons.scss
+++ b/css/sass/components/_dropdowns&Buttons.scss
@@ -107,3 +107,19 @@
     }
   }
 }
+
+.main-btn-tap {
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  padding: 0.3rem 1rem ;
+  border: none !important;
+  outline: none !important;
+  text-align: center;
+  &.active {
+    background-color: $light-mian-color2;
+    color: $mian-color;
+  }
+}
