--- a/css/sass/components/_boxes.scss
+++ b/css/sass/components/_boxes.scss
@@ -175,4 +175,14 @@
   -o-border-radius: 50%;
   object-fit: cover;
 }
+.text {
+ p {
+  font-size: 13px;
+ }
+}
+.info {
+ .icon {
+  color: $pink-color;
+ }
+}
 }
