--- a/css/sass/variables/_colors.scss
+++ b/css/sass/variables/_colors.scss
@@ -12,5 +12,6 @@ $black-color: #000;
 $color-50:#4D545A;
 $yellow-color:#FFF181;
 $pink-color: #f578b6;
+$light-pink-color: #FFE4E4;
 $light-text: #8f8f8f;
 
