--- a/css/main.css
+++ b/css/main.css
@@ -185,19 +185,21 @@
 }
 
 .main-btn-tap {
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
-  padding: 0.3rem 1rem;
+  border-radius: 10px !important;
+  -webkit-border-radius: 10px !important;
+  -moz-border-radius: 10px !important;
+  -ms-border-radius: 10px !important;
+  -o-border-radius: 10px !important;
+  padding: 0.3rem 1rem !important;
   border: none !important;
   outline: none !important;
-  text-align: center;
+  text-align: center !important;
+  color: #010B14 !important;
+  background-color: transparent !important;
 }
 .main-btn-tap.active {
-  background-color: #E4F7F7;
-  color: #0ABAB5;
+  background-color: #E4F7F7 !important;
+  color: #0ABAB5 !important;
 }
 
 .lg-title {
@@ -209,6 +211,21 @@
   color: #0ABAB5;
   font-size: 30px;
   font-weight: bold;
+}
+
+.badge-pink {
+  background-color: #FFE4E4;
+  color: #f578b6;
+  padding: 0.3rem 1rem;
+  font-size: 12px;
+  text-align: center;
+  -webkit-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1019607843);
+          box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1019607843);
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
 }
 
 .box-section {
@@ -428,6 +445,28 @@
 }
 .box-border .info .icon {
   color: #f578b6;
+}
+.box-border .box-section-icon .box-icon {
+  border: 2px solid #fff181;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin: 0 auto 0.3rem auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #f578b6;
+  font-size: 20px;
 }
 
 .main-inp {
