--- a/css/sass/components/_boxes.scss
+++ b/css/sass/components/_boxes.scss
@@ -185,4 +185,20 @@
   color: $pink-color;
  }
 }
+.box-section-icon {
+ .box-icon {
+  border: 2px solid #fff181;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin: 0 auto 0.3rem auto;
+  @include flex-center;
+  color: $pink-color;
+  font-size: 20px;
+}
+}
 }
