--- a/css/sass/components/_headings.scss
+++ b/css/sass/components/_headings.scss
@@ -7,3 +7,17 @@
  font-size: 30px;
  font-weight: bold;
 }
+
+.badge-pink {
+ background-color: $light-pink-color;
+ color: $pink-color;
+ padding: 0.3rem 1rem;
+ font-size: 12px;
+ text-align: center;
+ box-shadow: 0 2px 6px 0 #0000001a;
+ border-radius: 50px;
+ -webkit-border-radius: 50px;
+ -moz-border-radius: 50px;
+ -ms-border-radius: 50px;
+ -o-border-radius: 50px;
+}
